# libxml2

./: .project  CMakeLists.txt  README.rst  config.h.cmake.in  configure  libxml.h  libxml2-config.cmake.cmake.in  libxml2-config.cmake.in  libxml2-config.in.cmake  libxml2.spec  nanohttp.c  relaxng.c  xml2_config.h.cmake  xmlIO.c
include/libxml/: xmlversion.h  xmlversion.h.cmake
src/: libxml.h  trio.h
